# dsa-llvm-project

./: .gitignore  setup.llvm.debug.sh  setup.llvm.release.sh  setup.omp.sh  setup.sh  ssp-setup.sh
clang/include/clang/Basic/: Attr.td  Builtins.def  CapturedStmt.h  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  LangOptions.def  TokenKinds.def
clang/include/clang/Driver/: Options.td
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: SSHint.h
clang/lib/AST/: ASTContext.cpp  Expr.cpp
clang/lib/CodeGen/: CGAtomic.cpp  CGLoopInfo.cpp  CGLoopInfo.h  CGStmt.cpp  CodeGenFunction.h  CodeGenModule.cpp
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Parse/: ParseExpr.cpp  ParsePragma.cpp  ParseStmt.cpp
clang/lib/Sema/: SemaChecking.cpp  SemaDeclAttr.cpp  SemaStmtAttr.cpp
llvm/: .gitignore  README.md
llvm/include/llvm/Analysis/: VectorUtils.h
llvm/include/llvm/Bitcode/: LLVMBitCodes.h
llvm/include/llvm/IR/: Attributes.td  (+3 more)
llvm/lib/Analysis/: IVDescriptors.cpp  VectorUtils.cpp
llvm/lib/AsmParser/: LLLexer.cpp  LLParser.cpp  LLToken.h
llvm/lib/IR/: Attributes.cpp  Verifier.cpp
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/DSAFusion/: CMakeLists.txt  Pass.cpp
llvm/lib/Transforms/DSAPass/: .gitignore  CMakeLists.txt  CodeXform.cpp  CodeXform.h  DFGAnalysis.cpp  DFGAnalysis.h  DFGEntry.cpp  DFGEntry.h  DFGIR.cpp  DFGIR.h  DFGKind.def  DfgEntry.cpp  DfgEntry.h  Pass.cpp  Pass.h  RTTIUtils.h  StreamAnalysis.cpp  StreamAnalysis.h  TVMCleanup.cpp  Transformation.cpp  Transformation.h  Util.cpp  Util.h  llvm_common.h
llvm/lib/Transforms/IPO/: DeadArgumentElimination.cpp  ForceFunctionAttrs.cpp
llvm/lib/Transforms/Scalar/: LoopIdiomRecognize.cpp  LoopLoadElimination.cpp  LoopUnrollPass.cpp
llvm/lib/Transforms/TVMCleanup/: CMakeLists.txt  Pass.cpp
llvm/lib/Transforms/Utils/: CodeExtractor.cpp  Local.cpp  LoopUnrollRuntime.cpp
llvm/lib/Transforms/Vectorize/: LoopVectorize.cpp
openmp/runtime/: CMakeLists.txt
(+3 files in other folders)
