add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(CFGuard)

option(LLVM_ENABLE_DSA_PASS "Build DSAPass/DSAFusion." ON)
if (LLVM_ENABLE_DSA_PASS)
  add_subdirectory(DSAPass)
  add_subdirectory(DSAFusion)
endif()
